# diskscan

./: .gitignore  .travis.yml  CMakeLists.txt  DEVELOP.md  Makefile  README.md  all.do  asc-num-to-list  asc-num.txt  autogen.sh  clean.do  config.do  config.h.in  configure  configure.ac  default.o.do  diskscan.c  diskscan.do  diskscan.do.in  dist.do  dist.exclude  distclean.sh  do  install.do  libscsicmd.a.do  regen.sh  tags.do  tests.do
Documentation/: .gitignore  clean.do  diskscan.1.in  diskscan.md  md2man.py
afl/testcase/: id:000001,sig:11,src:005156,op:ext_AO,pos:34  id:000001,src:000141,op:arith8,pos:118,val:-34  id:000002,src:000200,op:ext_AO,pos:571  id:000003,src:000314,op:flip1,pos:19  id:000005,sig:11,src:005234,op:havoc,rep:2  id:000005,src:000445,op:flip1,pos:132  id:000018,sig:11,src:001807,op:flip1,pos:93  id:000019,src:001231,op:flip1,pos:72  log_sense_c52c16bd44de5cf72ba1a55c0b6258349a74e5d6.csv  log_sense_d192aef3ac66f84b8996edeb95ef1e7e9d6660cb.csv  log_sense_dc08fbd86ddd3f34a56532faf9b46f0ae135e644.csv  log_sense_f2ca65053fcb0a0b0a479e181fa8b497beb40d9c.csv
arch/: arch-freebsd.c  arch-generic.c  arch-linux.c  arch-linux.h  arch-posix.c  arch-posix.h  arch.a.do  arch.c.do  arch.id.do
cli/: cli.a.do  cli.c  verbose.c
debian/: changelog  clean  control  copyright  rules  watch
debian/patches/: readme
hdrhistogram/src/: hdr_histogram_log.c
include/: arch.h  asc_num_list.h  ata.h  ata_parse.h  ata_smart.h  cli.h  compiler.h  disk.h  diskscan.h  median.h  parse_mode_sense.h  parse_read_defect_data.h  parse_receive_diagnostics.h  scsicmd.h  scsicmd_utils.h  sense_key_list.h  verbose.h  version.h
lib/: data.c  data.h  disk.c  diskscan.a.do  diskscan.c  sha1.h  system_id.c  system_id.h  verbose.c
libscsicmd/: .gitignore  Makefile  README.md  clean.do  default.o.do  libscsicmd.a.do  tests.do  update-asc-num
libscsicmd/afl/testcase/: id:000007,sig:11,src:005483,op:flip2,pos:43  id:000008,src:001208,op:flip1,pos:89  id:000013,sig:11,src:005882,op:havoc,rep:2  id:000015,src:001216,op:flip1,pos:229  id:000018,src:001179,op:ext_AO,pos:826  id:000019,sig:11,src:001807,op:flip1,pos:670  id:000020,sig:11,src:001807,op:flip1,pos:2325  id:000021,sig:11,src:001807,op:flip2,pos:238  log_sense_9bd3419f85d952cf54a38196fc0775a2bfa4c6ff.csv  log_sense_ac03383386fa3d77d3d460480a52e0b99a1c580e.csv  log_sense_fb4080b69b8ca7d50d16f424305467a18d8eded9.csv  log_sense_fc58600bcf8dc103f911bb2a6a867ab2c8e42fe2.csv  log_sense_ffe62c433d9a885d2a5670ff890f5b00089739aa.csv  log_sense_ffee0af0b99b68b9d287e6f65ad08a4e11967daa.csv
libscsicmd/include/: asc_num_list.h  ata.h  ata_parse.h  ata_parse.h.do  parse_extended_inquiry.h  parse_log_sense.h  scsicmd.h  smartdb.h
libscsicmd/smartdb/: smartdb.h  smartdb_gen_c.py
libscsicmd/src/: CMakeLists.txt  ata.c  cdb.c  parse.c  parse_inquiry.c  parse_read_cap.c  parse_sense.c
libscsicmd/src/smartdb/: smartdb.c  smartdb_gen.c  smartdb_gen_c.py
libscsicmd/structs/: ata_struct_2_c_dump.py  ata_struct_2_h.py  ata_struct_2_h_dump.py
libscsicmd/test/: CMakeLists.txt  ata_identify.c  ata_identify_dump.c.do  ata_smart_read_data.c  collect_raw_data.c  main.c  main.h  parse_scsi.c  scsi_inquiry.do  scsi_log_sense.c  scsi_read_capacity_10.c  scsi_read_capacity_10.do  sense_dump.c  sense_dump.h
libscsicmd/test/samples/: breakout.py
smartdb/: smartdb.c  smartdb.xml  smartdb_gen.c.do  smartdb_gen_c.py
src/: CMakeLists.txt  ata.c  ata_smart.c  cdb.c  log_sense.c  parse_inquiry.c  parse_read_cap.c  parse_sense.c  str_map.c
src/smartdb/: smartdb.xml  smartdb_gen_c.py
structs/: asc-num-to-list  asc-num.txt  ata_identify.yaml  ata_struct_2_c_dump.py  ata_struct_2_h.py  ata_struct_2_h_dump.py  update-asc-num
test/: CMakeLists.txt  ata_check_power_mode.c  ata_check_power_mode.do  ata_identify.c  ata_identify.do  ata_identify_dump.h.do  ata_smart_read_data.c  ata_smart_read_data.do  ata_smart_return_status.c  ata_smart_return_status.do  main.c  main.h  scsi_inquiry.c  scsi_log_sense.c  scsi_log_sense.do  scsi_mode_sense.c  scsi_read_capacity_16.c  scsi_read_capacity_16.do  scsi_receive_diagnostics.c  sense_decode.c  sense_decode.do  sense_dump.c
test/samples/: parse_file.py
version/: .gitignore  all.do  clean.do  gitvars.do  prodname  vars.do  version.c.do
